--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,8 @@
 *.MAC text eol=crlf
+*.INC text eol=crlf
 *.PRN text eol=crlf
 *.SUB text eol=crlf
 *.MAC linguist-language=Assembly linguist-detectable
+*.INC linguist-language=Assembly linguist-detectable
 *.PRN linguist-generated
+*.SUB linguist-generated
